acvm-repo/msgpack_tagged/tests/compile_fail/duplicate_variant_reserved.stderr
error: duplicate `reserved(...)` modifier in `#[tagged(...)]`
  --> tests/compile_fail/duplicate_variant_reserved.rs:11:14
   |
11 |     #[tagged(reserved(3))]
   |              ^^^^^^^^^^^
